--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,9 @@
 	<script src="assets/js/nouislider.min.js"></script>
 	<script src="assets/js/countdown.js"></script>
 	<script src="assets/js/jquery.magnific-popup.min.js"></script>
-	<script src="assets/js/owl.carousel.min.js"></script>
-	<!--gmaps Js-->
+	<!-- <script src="assets/js/owl.carousel.min.js"></script> -->
+	
+
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
 	<script src="assets/js/gmaps.min.js"></script>
 	<script src="assets/js/main.js"></script>
