--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
 	<link rel="stylesheet" href="assets/css/ion.rangeSlider.skinFlat.css" />
 	<link rel="stylesheet" href="assets/css/magnific-popup.css">
 	<link rel="stylesheet" href="assets/css/main.css">
+	<!-- <link rel="stylesheet" type="text/css" href="assets/styles/custom-style.css"/> -->
 </head>
 
 <body>
@@ -41,7 +42,7 @@
 	<app-root></app-root>
 
 
-	<script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
+	<!-- <script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
 		integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
 		crossorigin="anonymous"></script>
@@ -52,12 +53,12 @@
 	<script src="assets/js/nouislider.min.js"></script>
 	<script src="assets/js/countdown.js"></script>
 	<script src="assets/js/jquery.magnific-popup.min.js"></script>
-	<!-- <script src="assets/js/owl.carousel.min.js"></script> -->
+	<script src="assets/js/owl.carousel.min.js"></script>
 	
 
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
 	<script src="assets/js/gmaps.min.js"></script>
-	<script src="assets/js/main.js"></script>
+	<script src="assets/js/main.js"></script> -->
 </body>
 
 </html>
