--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,18 @@
 	<link rel="stylesheet" href="assets/css/magnific-popup.css">
 	<link rel="stylesheet" href="assets/css/main.css">
 	<!-- <link rel="stylesheet" type="text/css" href="assets/styles/custom-style.css"/> -->
+	<!-- CSS LOGIN  -->
+	<!--
+		CSS
+		============================================= -->
+	<link rel="stylesheet" href="assets/css/linearicons.css">
+	<link rel="stylesheet" href="assets/css/owl.carousel.css">
+	<link rel="stylesheet" href="assets/css/themify-icons.css">
+	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="assets/css/nice-select.css">
+	<link rel="stylesheet" href="assets/css/nouislider.min.css">
+	<link rel="stylesheet" href="assets/css/bootstrap.css">
+	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body>
@@ -42,23 +54,26 @@
 	<app-root></app-root>
 
 
-	<!-- <script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
+
+	<!-- JS login -->
+	
+
+
+	<script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
 		integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
 		crossorigin="anonymous"></script>
-	<script src="assets/js/vendor/bootstrap.min.js"></script>
-	<script src="assets/js/jquery.ajaxchimp.min.js"></script>
-	<script src="assets/js/jquery.nice-select.min.js"></script>
-	<script src="assets/js/jquery.sticky.js"></script>
-	<script src="assets/js/nouislider.min.js"></script>
-	<script src="assets/js/countdown.js"></script>
-	<script src="assets/js/jquery.magnific-popup.min.js"></script>
-	<script src="assets/js/owl.carousel.min.js"></script>
-	
-
+	<script src="assets/vendor/bootstrap.min.js"></script>
+	<script src="assets/jquery.ajaxchimp.min.js"></script>
+	<script src="assets/jquery.nice-select.min.js"></script>
+	<script src="assets/jquery.sticky.js"></script>
+	<script src="assets/nouislider.min.js"></script>
+	<script src="assets/jquery.magnific-popup.min.js"></script>
+	<script src="assets/owl.carousel.min.js"></script>
+	<!--gmaps Js-->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
-	<script src="assets/js/gmaps.min.js"></script>
-	<script src="assets/js/main.js"></script> -->
+	<script src="assets/gmaps.min.js"></script>
+	<script src="assets/main.js"></script>
 </body>
 
 </html>
