feature-route-register

--- a/src/index.html
+++ b/src/index.html
@@ -36,19 +36,9 @@
 
 </head>
 
-<body>
-
-
-
-
+<body id="body" class="mat-typography">
 
 	<app-root></app-root>
-
-
-
-	<!-- JS login -->
-
-
 
 	<script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
